--- a/Locations.html
+++ b/Locations.html
@@ -19,7 +19,7 @@
             <header class="top-bar">
                 <h2>
                     <span><img alt="WattDepot logo"
-                        src="wattdepot-logo.png"> WattDepot3 HTML
+                        src="wattdepot-logo.png"> WattDepot3 HTTP
                         API: Sensor Locations</span>
                 </h2>
             </header>
@@ -42,7 +42,7 @@
                                         Models</a></li>
                             </ul></li>
                         <li><a href="SensorProcesses.html">Sensor
-                                Processes</a>
+                                Process Metadata</a>
                         <li><a href="WattDepositories.html">WattDepositories</a></li>
                     </ul>
                 </div>
