--- a/SensorGroups.html
+++ b/SensorGroups.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>WattDepot3 HTML API</title>
+<title>WattDepot3 HTTP API</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Bootstrap -->
 <link rel="stylesheet" href="dist/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
             <header class="top-bar">
                 <h2>
                     <span><img alt="WattDepot logo"
-                        src="wattdepot-logo.png"> WattDepot3 HTML
+                        src="wattdepot-logo.png"> WattDepot3 HTTP
                         API: Sensor Groups</span>
                 </h2>
             </header>
@@ -41,7 +41,7 @@
                                         Models</a></li>
                             </ul></li>
                         <li><a href="SensorProcesses.html">Sensor
-                                Processes</a>
+                                Process Metadata</a>
                         <li><a href="WattDepositories.html">WattDepositories</a></li>
                     </ul>
                 </div>
