--- a/SensorProcesses.html
+++ b/SensorProcesses.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>WattDepot3 HTML API</title>
+<title>WattDepot3 HTTP API</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Bootstrap -->
 <link rel="stylesheet" href="dist/css/bootstrap.min.css">
@@ -18,8 +18,8 @@
             <header class="top-bar">
                 <h2>
                     <span><img alt="WattDepot logo"
-                        src="wattdepot-logo.png"> WattDepot3 HTML
-                        API: Sensor Processes</span>
+                        src="wattdepot-logo.png"> WattDepot3 HTTP
+                        API: Sensor Process Metadata</span>
                 </h2>
             </header>
         </div>
@@ -41,7 +41,7 @@
                             </ul></li>
                         <li class="active"><a
                             href="SensorProcesses.html">Sensor
-                                Processes</a>
+                                Process Metadata</a>
                         <li><a href="WattDepositories.html">WattDepositories</a></li>
                     </ul>
                 </div>
@@ -125,7 +125,7 @@
                         </div>
                         <div class="card-description">
                             <p>Get a full list of defined Sensor
-                                Processes.</p>
+                                Process Metadata.</p>
                         </div>
                     </section>
                 </div>
@@ -220,7 +220,7 @@
             </pre>
                         </div>
                         <div class="card-description">
-                            <p>Get the Sensor Process with the given
+                            <p>Get the Sensor Process Metadata with the given
                                 sensorprocess_id.</p>
                         </div>
                     </section>
@@ -294,7 +294,7 @@
             </pre>
                         </div>
                         <div class="card-description">
-                            <p>Add the Sensor Process. Will return
+                            <p>Add the Sensor Process Metadata. Will return
                                 the status. Error status if duplicate
                                 unique id.</p>
                         </div>
@@ -326,7 +326,7 @@
             </pre>
                         </div>
                         <div class="card-description">
-                            <p>Deletes the Sensor Model with the
+                            <p>Deletes the Sensor Process Metadata with the
                                 given sensorprocess_id. Will return the
                                 status. Error status if sensorprocess_id
                                 is not defined.</p>
