--- a/WattDepositories.html
+++ b/WattDepositories.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>WattDepot3 HTML API</title>
+<title>WattDepot3 HTTP API</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Bootstrap -->
 <link rel="stylesheet" href="dist/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
             <header class="top-bar">
                 <h2>
                     <img alt="WattDepot logo" src="wattdepot-logo.png">
-                    WattDepot3 HTML API: Sensors
+                    WattDepot3 HTTP API: Sensors
                 </h2>
             </header>
         </div>
@@ -39,7 +39,7 @@
                                         Models</a></li>
                             </ul></li>
                         <li><a href="SensorProcesses.html">Sensor
-                                Processes</a>
+                                Process Metadata</a>
                         <li class="active"><a
                             href="WattDepositories.html">WattDepositories</a></li>
                     </ul>
