--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="well sidebar-nav">
                     <ul class="nav nav-pills nav-stacked">
                         <li class="active"><a href="index.html">Home</a>
-                        <li><a href="HtmlApi.html">HTML API</a></li>
+                        <li><a href="HtmlApi.html">HTTP API</a></li>
                         <li><a href="Starting.html">Starting up
                                 WattDepot3</a></li>
                     </ul>
