--- a/SensorModels.html
+++ b/SensorModels.html
@@ -40,8 +40,7 @@
                                     href="SensorModels.html">Sensor
                                         Models</a></li>
                             </ul></li>
-                        <li><a href="SensorProcesses.html">Sensor
-                                Process Metadata</a>
+                        <li><a href="SensorProcesses.html">Collector Metadata</a>
                         <li><a href="WattDepositories.html">WattDepositories</a></li>
                     </ul>
                 </div>
