--- a/WattDepositories.html
+++ b/WattDepositories.html
@@ -38,8 +38,7 @@
                                 <li><a href="SensorModels.html">Sensor
                                         Models</a></li>
                             </ul></li>
-                        <li><a href="SensorProcesses.html">Sensor
-                                Process Metadata</a>
+                        <li><a href="SensorProcesses.html">Collector Metadata</a>
                         <li class="active"><a
                             href="WattDepositories.html">WattDepositories</a></li>
                     </ul>
