--- a/SensorProcesses.html
+++ b/SensorProcesses.html
@@ -19,7 +19,7 @@
                 <h2>
                     <span><img alt="WattDepot logo"
                         src="wattdepot-logo.png"> WattDepot3 HTTP
-                        API: Sensor Process Metadata</span>
+                        API: Collector Metadata</span>
                 </h2>
             </header>
         </div>
@@ -40,8 +40,7 @@
                                         Models</a></li>
                             </ul></li>
                         <li class="active"><a
-                            href="SensorProcesses.html">Sensor
-                                Process Metadata</a>
+                            href="SensorProcesses.html">Collector Metadata</a>
                         <li><a href="WattDepositories.html">WattDepositories</a></li>
                     </ul>
                 </div>
@@ -53,11 +52,11 @@
                         <header>
                             <h2>
                                 <span class="big-type">GET</span>
-                                /wattdepot/{group_id}/sensorprocesses
+                                /wattdepot/{group_id}/collectormetadatas
                             </h2>
                         </header>
                         <div class="card-info">
-                            http://server.wattdepot.org/wattdepot/{group_id}/sensorprocesses
+                            http://server.wattdepot.org/wattdepot/{group_id}/collectormetadatas
                             <a class="btn right"
                                 onclick="$('#get_sensorprocesses_response_long').slideToggle()"><b>Response
                                     <span class="caret"></span>
@@ -124,8 +123,7 @@
 		    </pre>
                         </div>
                         <div class="card-description">
-                            <p>Get a full list of defined Sensor
-                                Process Metadata.</p>
+                            <p>Get a full list of defined Collector Metadata.</p>
                         </div>
                     </section>
                 </div>
@@ -134,11 +132,11 @@
                         <header>
                             <h2>
                                 <span class="big-type">GET</span>
-                                /wattdepot/{group_id}/sensorprocesses?short=true
+                                /wattdepot/{group_id}/collectormetadatas?short=true
                             </h2>
                         </header>
                         <div class="card-info">
-                            http://server.wattdepot.org/wattdepot/{group_id}/sensorprocesses?short=true
+                            http://server.wattdepot.org/wattdepot/{group_id}/collectormetadatas?short=true
                             <a class="btn right"
                                 onclick="$('#get_sensors_response').slideToggle()"><b>Response
                                     <span class="caret"></span>
@@ -176,11 +174,11 @@
                         <header>
                             <h3>
                                 <span class="big-type">GET</span>
-                                /wattdepot/{group_id}/sensorprocess/<span>{sensorprocess_id}</span>
+                                /wattdepot/{group_id}/collectormetadata/<span>{collectormetadata_id}</span>
                             </h3>
                         </header>
                         <div class="card-info">
-                            http://server.wattdepot.org/wattdepot/{group_id}/sensorprocess/egauge1-fast
+                            http://server.wattdepot.org/wattdepot/{group_id}/collectormetadata/egauge1-fast
                             <a class="btn right"
                                 onclick="$('#get_sensorprocess_response').slideToggle()"><b>Response
                                     <span class="caret"></span>
@@ -220,53 +218,18 @@
             </pre>
                         </div>
                         <div class="card-description">
-                            <p>Get the Sensor Process Metadata with the given
-                                sensorprocess_id.</p>
+                            <p>Get the Collector Metadata with the given
+                                collectormetadata_id.</p>
                         </div>
                     </section>
                 </div>
-<!--                 <div class="card">
-                    <section id="get_sensorprocess_short">
-                        <header>
-                            <h2>
-                                <span class="big-type">GET</span>
-                                /wattdepot/{group_id}/sensorprocess/<span>{sensorprocess_id}?short=true</span>
-                            </h2>
-                        </header>
-                        <div class="card-info">
-                            http://server.wattdepot.org/wattdepot/{group_id}/sensorprocess/egauge1-fast?short=true
-                            <a class="btn right"
-                                onclick="$('#get_sensorprocess_response_short').slideToggle()"><b>Response
-                                    <span class="caret"></span>
-                            </b></a>
-                        </div>
-                        <div class="card-info-more"
-                            id="get_sensorprocess_response_short"
-                            display="none">
-                            <pre>
-              <code>
-<span>{</span>
-   <span>&quot;id&quot;</span><span>:</span> <span>&quot;egauge1-fast&quot;,</span>
-   <span>&quot;sensorId&quot;</span><span>:</span> <span>&quot;ilima-6-telco&quot;,</span>
-   <span>&quot;pollingInterval&quot;</span><span>:</span> <span>10</span>
-<span class="p">},</span>
-              </code>
-            </pre>
-                        </div>
-                        <div class="card-description">
-                            <p>Get the Sensor Process with the given
-                                sensorprocess_id in shortened format.
-                                Shortened format uses sensor ids instead
-                                of full sensors.</p>
-                        </div>
-                    </section>
-                </div> -->
+
                 <div class="card">
                     <section id="post_sensorprocess">
                         <header>
                             <h2>
                                 <span class="big-type">PUT</span>
-                                /wattdepot/{group_id}/sensorprocess/
+                                /wattdepot/{group_id}/collectormetadata/
                             </h2>
                         </header>
                         <div class="card-info">
@@ -278,7 +241,7 @@
                             :"egauge1", "protocol": "eGauge", "type":
                             "EGAUGE", "version": "1.0"}, []},
                             "pollingInterval": 10}'
-                            http://server.wattdepot.org/wattdepot/{group_id}/sensorprocess/
+                            http://server.wattdepot.org/wattdepot/{group_id}/collectormetadata/
                           
                         </div>
                         <div class="card-info-more"
@@ -294,7 +257,7 @@
             </pre>
                         </div>
                         <div class="card-description">
-                            <p>Add the Sensor Process Metadata. Will return
+                            <p>Add the Collector Metadata. Will return
                                 the status. Error status if duplicate
                                 unique id.</p>
                         </div>
@@ -305,12 +268,12 @@
                         <header>
                             <h3>
                                 <span class="big-type">DEL</span>
-                                /wattdepot/{group_id}/sensorprocess/<span>{sensorprocess_id}</span>
+                                /wattdepot/{group_id}/collectormetadata/<span>{collectormetadata_id}</span>
                             </h3>
                         </header>
                         <div class="card-info">
                             curl -X DELETE
-                            http://server.wattdepot.org/wattdepot/{group_id}/sensorprocess/egauge1.0
+                            http://server.wattdepot.org/wattdepot/{group_id}/collectormetadata/egauge1.0
                             
                         </div>
                         <div class="card-info-more"
@@ -326,9 +289,9 @@
             </pre>
                         </div>
                         <div class="card-description">
-                            <p>Deletes the Sensor Process Metadata with the
-                                given sensorprocess_id. Will return the
-                                status. Error status if sensorprocess_id
+                            <p>Deletes the Collector Metadata with the
+                                given collectormetadata_id. Will return the
+                                status. Error status if collectormetadata_id
                                 is not defined.</p>
                         </div>
                     </section>
