--- a/Sensors.html
+++ b/Sensors.html
@@ -28,7 +28,7 @@
                 id="sidebar" role="navigation">
                 <div class="well sidebar-nav">
                     <ul class="nav nav-pills nav-stacked">
-                        <li> <a href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="HtmlApi.html">Overview</a></li>
                         <li class="active"><a href="Sensors.html">Sensors</a>
                             <ul>
@@ -39,8 +39,8 @@
                                 <li><a href="SensorModels.html">Sensor
                                         Models</a></li>
                             </ul></li>
-                        <li><a href="SensorProcesses.html">Sensor
-                                Process Metadata</a>
+                        <li><a href="SensorProcesses.html">Collector
+                                Metadata</a>
                         <li><a href="WattDepositories.html">WattDepositories</a></li>
                     </ul>
                 </div>
@@ -117,7 +117,7 @@
                         </div>
                     </section>
                 </div>
-<!--                 <div class="card">
+                <!--                 <div class="card">
                     <section id="get_sensors_short">
                         <header>
                             <h2>
@@ -211,7 +211,7 @@
                         </div>
                     </section>
                 </div>
-<!--                 <div class="card">
+                <!--                 <div class="card">
                     <section id="get_sensor_short">
                         <header>
                             <h2>
@@ -257,16 +257,15 @@
                                 /wattdepot/{group_id}/sensor/
                             </h2>
                         </header>
-                        <div class="card-info">
-                            curl -F '{"id": "sensor1", "uri"
-                            "http://foo.com", "location": {id :"loc2",
-                            "latitude": 21.294642, "longitude":
-                            -157.812727, "altitude": 40.0,
-                            "description": "40.0"}, "model": {id :"sm1",
-                            "protocol": "Hammer", "type": "hammer",
-                            "version": "1.0"}, []}'
+                        <div class="card-info">curl -F '{"id":
+                            "sensor1", "uri" "http://foo.com",
+                            "location": {id :"loc2", "latitude":
+                            21.294642, "longitude": -157.812727,
+                            "altitude": 40.0, "description": "40.0"},
+                            "model": {id :"sm1", "protocol": "Hammer",
+                            "type": "hammer", "version": "1.0"}, []}'
                             http://server.wattdepot.org/wattdepot/{group_id}/sensor/
-                            
+
                         </div>
                         <div class="card-info-more"
                             id="put_sensor_response" display="none">
@@ -294,10 +293,9 @@
                                 /wattdepot/{group_id}/sensor/<span>{sensor_id}</span>
                             </h2>
                         </header>
-                        <div class="card-info">
-                            curl -X DELETE
+                        <div class="card-info">curl -X DELETE
                             http://server.wattdepot.org/wattdepot/{group_id}/sensor/ilima-6th
-                            
+
                         </div>
                         <div class="card-info-more"
                             id="del_sensor_response" display="none">
